2008-05-06  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin Adler

        Preparation for upcoming work making LocalStorage persistent.

        When the application terminates, all pending local storage writes need to be
        sync'ed out to disk.
        This works n combination with platform specific code in WebKit that calls it.

        * WebCore.base.exp:

        * page/PageGroup.cpp:
        (WebCore::PageGroup::closeLocalStorage): Close all open LocalStorage objects
        * page/PageGroup.h:

        * storage/LocalStorage.cpp:
        (WebCore::LocalStorage::close): Placeholder for what will sync and terminate the
          local storage thread in the future.
        * storage/LocalStorage.h:

2008-05-06  Brady Eidson  <beidson@apple.com>

        Rubberstamped by David Kilzer

        * WebCore.base.exp:  Sort this mess!

2008-05-05  Mark Rowe  <mrowe@apple.com>

        Reviewed by Dan Bernstein.

        Fix 60 crashes seen on the buildbots that were misreported as hangs.

        * dom/Document.cpp:
        (WebCore::Document::detachNodeIterator): Null-check page() before dereferencing it.
        (WebCore::Document::nodeWillBeRemoved): Ditto.
        (WebCore::Document::textInserted): Ditto.
        (WebCore::Document::textNodesMerged): Ditto.
        (WebCore::Document::textRemoved): Ditto.

2008-05-05  Brady Eidson  <beidson@apple.com>

        Reviewed by Mitz Pettel RTL

        Preparation for upcoming work making LocalStorage persistent.

        The other half of the StorageMap::importItem() addition.

        * storage/StorageArea.cpp:
        (WebCore::StorageArea::importItem):
        * storage/StorageArea.h:

2008-05-05  Brady Eidson  <beidson@apple.com>

        Reviewed by Mitz Pettel RTL

        Preparation for upcoming work making LocalStorage persistent.

        - Create the LocalStorage object for a PageGroup the moment the first Page is added to it